force-app/main/default/objects/tc9_ext_recon__Payroll_Reconciliation_Setup__c/tc9_ext_recon__Payroll_Reconciliation_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To hold the batch size setting for reconciliation batch job</description>
    <label>Payroll Reconciliation Setup</label>
</CustomObject>