force-app/main/default/objects/tc9_ext_recon__Payroll_Reconciliation_Setup__c/fields/tc9_ext_recon__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Batch_Size__c</fullName>
    <description>The number of payees to run reconciliation on per batch</description>
    <inlineHelpText>The number of payees to run reconciliation on per batch</inlineHelpText>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>