force-app/main/default/objects/tc9_ext_recon__Payroll_Reconciliation_Setup__c/fields/tc9_ext_recon__Earliest_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Earliest_Date__c</fullName>
    <description>Earliest date to run reconciliation from (i.e. only payee pay batches after July 1 2021.) Note. the code will default to July 1 2021 if this is left blank</description>
    <inlineHelpText>Earliest date to run reconciliation from (i.e. only payee pay batches after July 1 2021.) Note. the code will default to July 1 2021 if this is left blank</inlineHelpText>
    <label>Earliest Date</label>
    <type>Date</type>
</CustomField>