force-app/main/default/objects/tc9_ext_recon__Payroll_Reconciliation_Setup__c/fields/tc9_ext_recon__Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Latest_Date__c</fullName>
    <description>Latest date to run reconciliation from (i.e. only payee pay batches before June 30 2022.) Note. the code will default to June 30 2022 if this is left blank</description>
    <inlineHelpText>Latest date to run reconciliation from (i.e. only payee pay batches before June 30 2022.) Note. the code will default to June 30 2022 if this is left blank</inlineHelpText>
    <label>Latest Date</label>
    <type>Date</type>
</CustomField>